tests/files/flow_controller_tests/should_run/033.cmdr
x = parseFloat(8);
print x;