tests/files/flow_controller_tests/should_fail/062.cmdr
x = "cat";
print cosh(x);